--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
- <meta charset="UTF-8">
- <title>Meadowlark Travel</title>
-</head>
-<body>
-  <header><img src="/img/logo.png" alt="Meadowlark Travel Logo"></header>
-  {{{body}}}
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <title>Meadowlark Travel</title>
+    {{#if showTests}}
+      <link rel="stylesheet" href="/vendor/mocha.css">
+    {{/if}}
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  </head>
+  <body>
+    <header><img src="/img/logo.png" alt="Meadowlark Travel Logo"></header>
+    {{{body}}}
+    {{#if showTests}}
+      <div id="mocha"></div>
+      <script src="/vendor/mocha.js"></script>
+      <script src="/vendor/chai.js"></script>
+      <script type="text/javascript" charset="utf-8">
+        mocha.ui('tdd');
+        var assert = chai.assert;
+      </script>
+      <script src="/qa/tests-global.js"></script>
+      {{#if pageTestScript}}
+        <script src="{{pageTestScript}}"></script>
+      {{/if}}
+      <script>mocha.run();</script>
+    {{/if}}
+  </body>
 </html>
