--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,14 +3,21 @@
   <head>
     <meta charset="UTF-8">
     <title>Meadowlark Travel</title>
+
+    {{{_sections.head}}}
+
     {{#if showTests}}
       <link rel="stylesheet" href="/vendor/mocha.css">
     {{/if}}
+
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   </head>
   <body>
     <header><img src="/img/logo.png" alt="Meadowlark Travel Logo"></header>
     {{{body}}}
+
+    {{{_sections.jquery}}}
+
     {{#if showTests}}
       <div id="mocha"></div>
       <script src="/vendor/mocha.js"></script>
